--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,6 +32,7 @@ dependencies:
   flutter:
     sdk: flutter
   velocity_x: ^4.2.1
+  clip_shadowx: ^0.0.1
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
@@ -61,6 +62,7 @@ flutter:
   uses-material-design: true
   assets:
     - assets/image/dolce_cold_brew.jpeg
+    - assets/image/fat_character.png
     - assets/image/iced_americano.jpeg
     - assets/image/malcha_frappuchino.jpeg
     - assets/image/starbucks_logo.png
